(lang dune 2.9)
;;< goto switch?
(generate_opam_files true)

(name cryfifo)
; goto 
;(source (github rand00)) 
(license GPLv3)
(authors "rand")
(maintainers "rand@r7p5.earth")

(package
 (name cryfifo)
 (synopsis "crypto fifo taxation calculator")
 ;;> goto check if works with newline
 (description "miav")
)

